<resources>
    <string name="app_name">CaptureCap</string>
    <string name="record_start">Start recording</string>
    <string name="record_stop">Stop recording</string>
    <string name="record_pause">Pause recording</string>
    <string name="record_resume">Continue recording</string>
    <string name="record_open_title">Open</string>
    <string name="record_share_title">Share</string>
    <string name="record_delete_title">Delete</string>
    <string name="record_crop_title">Crop</string>
    <string name="record_back_title">Back to recording</string>
    <string name="record_open">Open recording</string>
    <string name="record_share">Share recording</string>
    <string name="record_delete">Delete recording</string>
    <string name="record_crop">Crop recording</string>
    <string name="settings_title">Settings</string>
    <string name="option_activated">Activated</string>
    <string name="option_deactivated">Deactivated</string>
    <string name="info_title">About CaptureCap</string>
    <string name="info_version">Version</string>
    <string name="info_sources">Source code</string>
    <string name="info_license">Read license</string>
    <string name="info_donate">Donate</string>
    <string name="info_ainotice">AI Notice</string>
    <string name="info_changelog">Changelog</string>
    <string name="info_contributors">Contributors</string>
    <string name="info_contributed_to_text">Contributed to</string>
    <string name="donate_title">Donate</string>
    <string name="donate_copy_wallet">Copy Wallet</string>
    <string name="capture_settings">Capture settings</string>
    <string name="quality_indicator_custom">Custom recording quality</string>
    <string name="quality_indicator_custom_description">Ignore automatic quality settings</string>
    <string name="quality_indicator">Recording quality</string>
    <string name="quality_indicator_description">Set quality</string>
    <string name="quality_normal">Normal</string>
    <string name="quality_low">Low</string>
    <string name="quality_lowest">Lowest</string>
    <string name="fps_indicator_custom">Custom FPS</string>
    <string name="fps_indicator_custom_description">Ignore automatic FPS settings</string>
    <string name="fps_indicator">Recording FPS</string>
    <string name="fps_indicator_description">Set custom frames per second</string>
    <string name="bitrate_indicator_custom">Custom bitrate</string>
    <string name="bitrate_indicator_custom_description">Ignore automatic bitrate settings</string>
    <string name="bitrate_indicator">Recording bitrate</string>
    <string name="bitrate_indicator_description">Set custom bitrate</string>
    <string name="keyframe_indicator_custom">Custom keyframe</string>
    <string name="keyframe_indicator_custom_description">Ignore automatic keyframe interval settings</string>
    <string name="keyframe_indicator">Recording keyframe</string>
    <string name="keyframe_indicator_description">Set custom keyframe interval</string>
    <string name="audio_sources_list">Select input audio sources</string>
    <string name="audio_source_media">Media audio source</string>
    <string name="audio_source_game">Game audio source</string>
    <string name="audio_source_unknown">Unknown audio source</string>
    <string name="resolution_option">Choose custom video resolution</string>
    <string name="resolution_option_description">Set custom video resolution</string>
    <string name="resolution_option_auto">Native</string>
    <string name="capture_start">Start capture</string>
    <string name="capture_abort">Abort capture</string>
    <string name="capture_prepared_title">Prepared for capture</string>
    <string name="capture_prepared_description">Start or abort capture</string>
    <string name="format_option">Choose custom video format</string>
    <string name="format_option_description">Set custom video format</string>
    <string name="format_option_auto">Default</string>
    <string name="audio_format_option">Choose custom audio format</string>
    <string name="audio_format_option_description">Set custom audio format</string>
    <string name="audio_format_option_auto">Default</string>
    <string name="codec_option">Choose custom video codec</string>
    <string name="codec_option_description">Set custom video codec</string>
    <string name="codec_option_auto">Default</string>
    <string name="audio_codec_option">Choose custom audio codec</string>
    <string name="audio_codec_option_description">Set custom audio codec</string>
    <string name="audio_codec_option_auto">Default</string>
    <string name="microphone_option">Select microphone</string>
    <string name="microphone_option_description">Choose the microphone device</string>
    <string name="microphone_option_auto">Default</string>
    <string name="audio_volume_option">Audio volume</string>
    <string name="audio_volume_option_description">Set volume for system audio or microphone</string>
    <string name="audio_volume_audio">Audio volume</string>
    <string name="audio_volume">Volume</string>
    <string name="audio_volume_microphone">Microphone volume</string>
    <string name="audio_volume_phonecall">Phone call volume</string>
    <string name="samplerate_indicator_custom">Custom audio sample rate</string>
    <string name="samplerate_indicator_custom_description">Ignore default sample rate</string>
    <string name="samplerate_indicator">Audio sample rate</string>
    <string name="samplerate_indicator_description">Set custom audio sample rate</string>
    <string name="audio_channels">Audio channels</string>
    <string name="audio_channels_description">Set audio channels</string>
    <string name="dontnotifyonfinish_option">Don\'t notify on finish</string>
    <string name="dontnotifyonfinish_option_description">Don\'t get notified that recording just finished</string>
    <string name="dontnotifyonrotate_option">Don\'t notify on rotate</string>
    <string name="dontnotifyonrotate_option_description">Don\'t notify on new recording start when screen rotates</string>
    <string name="enablevibration_option">Enable vibration</string>
    <string name="enablevibration_option_description">Enable vibration on recording start, pause and end</string>
    <string name="minimizeonstart_option">Minimize on start</string>
    <string name="minimizeonstart_option_description">Minimize the app when a new recording starts</string>
    <string name="enabletimer_option">Enable timer</string>
    <string name="enabletimer_option_description">Enable timer before recording starts</string>
    <string name="timerseconds_option">Timer duration</string>
    <string name="timerseconds_option_description">Specify timer\'s duration</string>
    <string name="timerseconds_option_duration_minutes">minutes</string>
    <string name="timerseconds_option_duration_seconds">seconds</string>
    <string name="norotate_option">Don\'t restart on rotate</string>
    <string name="norotate_option_description">WARNING: If enabled, your video will lose quality after rotation!</string>
    <string name="rotatehardwaresensor_option">Hardware rotation</string>
    <string name="rotatehardwaresensor_option_description">Detect rotation by hardware sensors instead of display</string>
    <string name="prerecording_option">Pre-recording pause</string>
    <string name="prerecording_option_description">Start the recording whenever you need to</string>
    <string name="disable_animations_option">Disable animations</string>
    <string name="disable_animations_option_description">Disable in-app animations</string>
    <string name="shizuku_settings">Shizuku settings</string>
    <string name="shizuku_enable_option">Enable Shizuku</string>
    <string name="shizuku_enable_option_description">Enable Shizuku for phone call recording</string>
    <string name="shizuku_phonecall_audio_source_option">Phone call source</string>
    <string name="shizuku_phonecall_audio_source_option_description">Choose phone call recording audio source</string>
    <string name="shizuku_auto_manage_option">Auto-manage Shizuku</string>
    <string name="shizuku_auto_manage_option_description">Enable automatically starting Shizuku</string>
    <string name="shizuku_auth_key_option">Shizuku auth key</string>
    <string name="shizuku_auth_key_option_description">Provide an auth key to automatically start/stop Shizuku</string>
    <string name="shizuku_waiting">Waiting for Shizuku, please try again</string>
    <string name="shizuku_unsupported">Shizuku version is unsupported</string>
    <string name="controls_settings">Controls settings</string>
    <string name="floating_controls_option">Enable floating controls</string>
    <string name="floating_controls_option_description">Show floating controls panel</string>
    <string name="floating_controls_position">Floating controls position</string>
    <string name="floating_controls_position_description">Set floating controls position</string>
    <string name="floating_controls_position_notice">Tap the screen when complete</string>
    <string name="floating_controls_size">Floating controls size</string>
    <string name="floating_controls_size_description">Set floating controls size</string>
    <string name="floating_controls_opacity">Floating controls opacity</string>
    <string name="floating_controls_opacity_description">Set floating controls opacity</string>
    <string name="floating_controls_reduce_to_dot">Floating controls panel dot</string>
    <string name="floating_controls_reduce_to_dot_description">Reduce panel to a dot when collapsed</string>
    <string name="floating_controls_description_handle">Floating controls handle</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screen_orientation_description">Force screen orientation</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="screen_rotation_description">Force screen rotation</string>
    <string name="crop_screen_title">Crop screen portion</string>
    <string name="crop_screen_option">Crop screen</string>
    <string name="crop_screen_option_description">Record only selected screen portion</string>
    <string name="crop_screen_contents">Select crop screen</string>
    <string name="crop_screen_contents_description">Select contents to crop</string>
    <string name="crop_screen_smooth_crop">Smooth screen crop</string>
    <string name="crop_screen_smooth_crop_description">Apply smoothing crop filter</string>
    <string name="crop_screen_width">Width</string>
    <string name="draw_overlay_option">Draw overlay</string>
    <string name="draw_overlay_option_description">Draw overlay over recording</string>
    <string name="draw_overlay_contents">Edit overlay</string>
    <string name="draw_overlay_contents_description">Edit overlay\'s contents</string>
    <string name="draw_overlay_erase_vertical">Reset vertical overlay</string>
    <string name="draw_overlay_erase_vertical_description">Reset video\'s vertical overlay</string>
    <string name="draw_overlay_erase_horizontal">Reset horizontal overlay</string>
    <string name="draw_overlay_erase_horizontal_description">Reset video\'s horizontal overlay</string>
    <string name="dark_theme_option">Theme</string>
    <string name="dark_theme_option_description">Set theme preferences</string>
    <string name="on_shake_option_summary">Action on device shake</string>
    <string name="on_shake_option_title">On shake</string>
    <string name="on_shake_dialog">On shake dialog</string>
    <string name="sound_control_notification_option_title">Sound control notification</string>
    <string name="sound_control_notification_option_description">Enable sound switches control notification</string>
    <string name="setting_video_recordings_folder">Video recordings folder</string>
    <string name="setting_audio_recordings_folder">Audio recordings folder</string>
</resources>