<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/capture_settings"
        android:key="capturesettings">

        <Preference
            android:key="folderpathpref"
            android:title="@string/setting_video_recordings_folder" />

        <Preference
            android:key="folderaudiopathpref"
            android:title="@string/setting_audio_recordings_folder" />

        <SwitchPreferenceCompat
            android:key="customquality"
            android:summary="@string/quality_indicator_custom_description"
            android:title="@string/quality_indicator_custom"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.ParameterDialog
            android:key="qualityscale"
            android:dependency="customquality"
            android:summary="@string/quality_indicator_description"
            android:title="@string/quality_indicator"
            android:dialogLayout="@layout/dialog_quality" />

        <SwitchPreferenceCompat
            android:key="customfps"
            android:summary="@string/fps_indicator_custom_description"
            android:title="@string/fps_indicator_custom"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.NonNullText
            android:key="fpsvalue"
            android:dependency="customfps"
            android:summary="@string/fps_indicator_description"
            android:title="@string/fps_indicator"
            android:gravity="center"
            android:inputType="number"
            android:defaultValue="30" />

        <SwitchPreferenceCompat
            android:key="custombitrate"
            android:summary="@string/bitrate_indicator_custom_description"
            android:title="@string/bitrate_indicator_custom"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.NonNullText
            android:key="bitratevalue"
            android:dependency="custombitrate"
            android:summary="@string/bitrate_indicator_description"
            android:title="@string/bitrate_indicator"
            android:gravity="center"
            android:inputType="number"
            android:defaultValue="1" />

        <com.yepgoryo.CaptureCap.ResolutionList
            android:key="resolutionvalue"
            android:summary="@string/resolution_option_description"
            android:title="@string/resolution_option"
            android:dialogTitle="@string/resolution_option"
            android:defaultValue="@string/resolution_option_auto_value" />

        <com.yepgoryo.CaptureCap.FormatList
            android:key="formatvalue"
            android:summary="@string/format_option_description"
            android:title="@string/format_option"
            android:dialogTitle="@string/format_option"
            android:defaultValue="@string/format_option_auto_value" />

        <com.yepgoryo.CaptureCap.CodecList
            android:key="codecvalue"
            android:summary="@string/codec_option_description"
            android:title="@string/codec_option"
            android:dialogTitle="@string/codec_option"
            android:defaultValue="@string/codec_option_auto_value" />

        <Preference
            android:key="selectaudiosources"
            android:title="@string/audio_sources_list"
            app:fragment="com.yepgoryo.CaptureCap.AudioSourcesSettingsFragment" />

        <CheckBoxPreference
            android:key="soundcontrolnotification"
            android:summary="@string/sound_control_notification_option_description"
            android:title="@string/sound_control_notification_option_title"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.FormatList
            android:key="audioformatvalue"
            android:summary="@string/audio_format_option_description"
            android:title="@string/audio_format_option"
            android:dialogTitle="@string/audio_format_option"
            android:defaultValue="@string/audio_format_option_auto_value" />

        <com.yepgoryo.CaptureCap.CodecList
            android:key="audiocodecvalue"
            android:summary="@string/audio_codec_option_description"
            android:title="@string/audio_codec_option"
            android:dialogTitle="@string/audio_codec_option"
            android:defaultValue="@string/audio_codec_option_auto_value" />

        <SwitchPreferenceCompat
            android:key="customsamplerate"
            android:summary="@string/samplerate_indicator_custom_description"
            android:title="@string/samplerate_indicator_custom"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.NonNullText
            android:key="sampleratevalue"
            android:dependency="customsamplerate"
            android:summary="@string/samplerate_indicator_description"
            android:title="@string/samplerate_indicator"
            android:gravity="center"
            android:inputType="number"
            android:defaultValue="44100" />

        <ListPreference
            android:key="audiochannels"
            android:summary="@string/audio_channels_description"
            android:title="@string/audio_channels"
            android:dialogTitle="@string/audio_channels"
            android:entries="@array/audio_channels_preferences"
            android:entryValues="@array/audio_channels_preferences_values"
            android:defaultValue="@string/audio_channels_preferences_option_default_value" />

        <com.yepgoryo.CaptureCap.MicrophonesList
            android:key="selectedmicrophone"
            android:summary="@string/microphone_option_description"
            android:title="@string/microphone_option"
            android:dialogTitle="@string/microphone_option"
            android:defaultValue="@string/microphone_option_auto_value" />

        <com.yepgoryo.CaptureCap.ParameterDialog
            android:key="audiovolumeoption"
            android:summary="@string/audio_volume_option_description"
            android:title="@string/audio_volume_option"
            android:dialogLayout="@layout/dialog_audio_volume" />

        <ListPreference
            android:key="screenorientation"
            android:summary="@string/screen_orientation_description"
            android:title="@string/screen_orientation"
            android:dialogTitle="@string/screen_orientation"
            android:entries="@array/screen_orientation_preferences"
            android:entryValues="@array/screen_orientation_preferences_values"
            android:defaultValue="@string/screen_orientation_option_auto_value" />

        <ListPreference
            android:key="screenrotation"
            android:summary="@string/screen_rotation_description"
            android:title="@string/screen_rotation"
            android:dialogTitle="@string/screen_rotation"
            android:entries="@array/screen_rotation_preferences"
            android:entryValues="@array/screen_rotation_preferences_values"
            android:defaultValue="@string/screen_rotation_option_auto_value" />

        <CheckBoxPreference
            android:key="norotate"
            android:summary="@string/norotate_option_description"
            android:title="@string/norotate_option"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="rotatehardwaresensor"
            android:summary="@string/rotatehardwaresensor_option_description"
            android:title="@string/rotatehardwaresensor_option"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="dontnotifyonrotate"
            android:summary="@string/dontnotifyonrotate_option_description"
            android:title="@string/dontnotifyonrotate_option"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="dontnotifyonfinish"
            android:summary="@string/dontnotifyonfinish_option_description"
            android:title="@string/dontnotifyonfinish_option"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="enablevibration"
            android:summary="@string/enablevibration_option_description"
            android:title="@string/enablevibration_option"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="minimizeonstart"
            android:summary="@string/minimizeonstart_option_description"
            android:title="@string/minimizeonstart_option"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="enabletimer"
            android:summary="@string/enabletimer_option_description"
            android:title="@string/enabletimer_option"
            android:defaultValue="false" />

        <com.yepgoryo.CaptureCap.ParameterDialog
            android:key="timerseconds"
            android:dependency="enabletimer"
            android:summary="@string/timerseconds_option_description"
            android:title="@string/timerseconds_option"
            android:dialogLayout="@layout/dialog_timer" />

        <CheckBoxPreference
            android:key="prerecording"
            android:summary="@string/prerecording_option_description"
            android:title="@string/prerecording_option"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="cropscreen"
            android:summary="@string/crop_screen_option_description"
            android:title="@string/crop_screen_option"
            android:defaultValue="false" />

        <Preference
            android:key="cropscreencontents"
            android:title="@string/crop_screen_contents"
            android:summary="@string/crop_screen_contents_description"
            android:dependency="cropscreen">
            <intent android:targetPackage="com.yepgoryo.CaptureCap"
                android:targetClass="com.yepgoryo.CaptureCap.SelectScreenCropAreaActivity" />
        </Preference>

        <CheckBoxPreference
            android:key="smoothcrop"
            android:summary="@string/crop_screen_smooth_crop_description"
            android:title="@string/crop_screen_smooth_crop"
            android:dependency="cropscreen"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="drawoverlay"
            android:summary="@string/draw_overlay_option_description"
            android:title="@string/draw_overlay_option"
            android:defaultValue="false" />

        <Preference
            android:key="drawoverlaycontents"
            android:title="@string/draw_overlay_contents"
            android:summary="@string/draw_overlay_contents_description"
            android:dependency="drawoverlay">
            <intent android:targetPackage="com.yepgoryo.CaptureCap"
                android:targetClass="com.yepgoryo.CaptureCap.VideoOverlaySettings" />
        </Preference>

        <Preference
            android:key="drawoverlayerasevertical"
            android:title="@string/draw_overlay_erase_vertical"
            android:summary="@string/draw_overlay_erase_vertical_description"
            android:dependency="drawoverlay">
        </Preference>

        <Preference
            android:key="drawoverlayerasehorizontal"
            android:title="@string/draw_overlay_erase_horizontal"
            android:summary="@string/draw_overlay_erase_horizontal_description"
            android:dependency="drawoverlay">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/shizuku_settings"
        android:key="shizukusettings">

        <SwitchPreferenceCompat
            android:key="shizukuenable"
            android:summary="@string/shizuku_enable_option_description"
            android:title="@string/shizuku_enable_option"
            android:defaultValue="false" />

        <ListPreference
            android:key="shizukuphonecallaudiosource"
            android:summary="@string/shizuku_phonecall_audio_source_option_description"
            android:title="@string/shizuku_phonecall_audio_source_option"
            android:dependency="shizukuenable"
            android:dialogTitle="@string/shizuku_phonecall_audio_source_option"
            android:entries="@array/shizuku_phonecall_audio_source_preferences"
            android:entryValues="@array/shizuku_phonecall_audio_source_preferences_values"
            android:defaultValue="@string/shizuku_phonecall_audio_source_preferences_auto_value" />

        <SwitchPreferenceCompat
            android:key="shizukuautomanage"
            android:summary="@string/shizuku_auto_manage_option_description"
            android:title="@string/shizuku_auto_manage_option"
            android:dependency="shizukuenable"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="shizukuauthkey"
            android:summary="@string/shizuku_auth_key_option_description"
            android:title="@string/shizuku_auth_key_option"
            android:dependency="shizukuautomanage"
            android:defaultValue="" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/controls_settings"
        android:key="controlssettings">

        <SwitchPreferenceCompat
            android:key="floatingcontrols"
            android:summary="@string/floating_controls_option_description"
            android:title="@string/floating_controls_option"
            android:defaultValue="false" />

        <Preference
            android:key="floatingcontrolsposition"
            android:title="@string/floating_controls_position"
            android:summary="@string/floating_controls_position_description"
            android:dependency="floatingcontrols">
            <intent android:targetPackage="com.yepgoryo.CaptureCap"
                android:targetClass="com.yepgoryo.CaptureCap.PanelPositionScreen" />
        </Preference>

        <ListPreference
            android:key="floatingcontrolssize"
            android:summary="@string/floating_controls_size_description"
            android:title="@string/floating_controls_size"
            android:dependency="floatingcontrols"
            android:dialogTitle="@string/floating_controls_size"
            android:entries="@array/floating_controls_size_preferences"
            android:entryValues="@array/floating_controls_size_preferences_values"
            android:defaultValue="@string/floating_controls_size_option_auto_value" />

        <com.yepgoryo.CaptureCap.ParameterDialog
            android:key="floatingcontrolsopacity"
            android:dependency="floatingcontrols"
            android:summary="@string/floating_controls_opacity_description"
            android:title="@string/floating_controls_opacity"
            android:dialogLayout="@layout/dialog_opacity" />

        <CheckBoxPreference
            android:key="floatingcontrolsreducetodot"
            android:summary="@string/floating_controls_reduce_to_dot_description"
            android:title="@string/floating_controls_reduce_to_dot"
            android:defaultValue="false" />

        <ListPreference
            android:key="darktheme"
            android:summary="@string/dark_theme_option_description"
            android:title="@string/dark_theme_option"
            android:dialogTitle="@string/dark_theme_option"
            android:entries="@array/dark_theme_option_preferences"
            android:entryValues="@array/dark_theme_option_preferences_values"
            android:defaultValue="@string/dark_theme_option_auto" />

        <ListPreference
            android:key="onshake"
            android:summary="@string/on_shake_option_summary"
            android:title="@string/on_shake_option_title"
            android:dialogTitle="@string/on_shake_dialog"
            android:entries="@array/on_shake_option_preferences"
            android:entryValues="@array/on_shake_preferences_values"
            android:defaultValue="@string/on_shake_default"/>

    </PreferenceCategory>

</PreferenceScreen>
